[package]
name = "jumpjet-cli"
description = "Developer CLI for the Jumpjet runtime"
repository = "https://github.com/jumpjet-runtime/jumpjet"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
jumpjet = { workspace = true }
better-panic = "0.3.0"
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
ratatui = { version = "0.28.1", features = ["crossterm", "serde", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
toml = "0.8.10"
liquid = "0.26.4"
ratatui-image = "1.0.5"
image = "0.24.9"
cargo = { version = "0.79.0", features = ["vendored-openssl"] }
reqwest = { version = "0.12.4", features = ["json"] }
current_platform = "0.2.0"
flate2 = "1.0.30"
tar = "0.4.40"
semver = "1.0.23"
chrono = "0.4.38"
icns = "0.3.1"
msi = "0.7.0"
wit-parser = "0.245.0"
tui-widget-list = "0.12.1"
self-replace = "1.5.0"
tempfile = { version = "3.12.0" }
rust-embed = "8.5.0"
wat = "1.245.0"
wit-component = "0.245.0"
subprocess = "0.2.9"
wasmparser = "0.245.0"
cab = "0.4"
uuid = "1.14.0"
xz2 = "0.1.7"
zip = "8"
sha2 = "0.10.8"
wac-graph = "0.10.1"           # programmatic component composition (package deps)
toml_edit = "0.25.12"          # `jumpjet add` edits to jumpjet.toml, preserving comments
wasm-pkg-client = "0.15.1"     # registry fetch/publish (wasm-pkg-tools)
# Pin jobserver below 0.1.33: that release added a `getrandom` dep which, together
# with wasm-pkg-client's tree, forms a cargo resolver cycle
# (cc -> jobserver -> getrandom -> wasip2 -> wit-bindgen -> wasm-metadata -> flate2
# -> libz-sys -> cc). 0.1.32 has no getrandom and still satisfies cc's `^0.1.30`.
# Do not bump without re-checking that cycle.
jobserver = "=0.1.32"

[build-dependencies]
vergen = { version = "8.2.6", features = [ "build", "git", "gitoxide", "cargo" ]}

[workspace]
resolver = '2'
members = [
  "crates/jumpjet",
  "crates/jumpjet-host"
]

[workspace.package]
version = "0.1.12"
authors = ["Lochlan Wansbrough"]
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
jumpjet = { path = "crates/jumpjet", version = "0.1.12" }
