[package]
name = "jumpjet-host"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "web"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "jumpjet-host"
path = "src/main.rs"

[dependencies]
jumpjet = { path = "../jumpjet", version = "0.1.13" }

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
wasm-bindgen = "0.2.100"
