[package]
name = "rune"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
doctest = false

[[test]]
name = "runtime"
path = "tests/runtime.rs"
harness = false

[dependencies]
wit-bindgen-core = "0.53.0"
wit-bindgen-rust = "0.53.0"
wit-component = "0.245.0"
wgpu-hal = "24.0.0"
wgpu-types = "24.0.0"
anyhow = "1.0.89"
async-trait = "0.1.71"
futures = "0.3.28"
pollster = "0.2.5"
once_cell = "1.18.0"
slab = "0.4.9"
vfs = "0.10.0"
termcolor = "1.3.0"
wasi = "0.14.2"
reqwest = "0.12.22"
url = "2.5.4"
winit = "0.30.11"
log = "0.4"
cpal = { version = "0.15.2", features = ["wasm-bindgen"] }
gimli = "0.32.3"
addr2line = "0.25.1"
object = { version = "0.38.1", features = ["read", "std", "elf", "wasm", "pe", "macho"] }
wasmparser = { version = "0.245.0", features = ["component-model"] }
# web-transport = "0.9.4"

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
uuid = { version = "1.4.1", features = ["v4", "js"] }

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ['component-model', 'debug', 'anyhow'] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }
cranelift-entity = { git = "https://github.com/bytecodealliance/wasmtime" }
gdbstub = "0.7.1"
dapts = "0.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gilrs = "0.10.2"
libtest-mimic = "0.7.3"
raw-window-handle = "0.6"
web-audio-api = "0.45.2"
uuid = { version = "1.4.1", features = ["v4"] }
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
wgpu-core = { version = "24.0.0", features = ["wgsl", "raw-window-handle", "vulkan"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu-core = { version = "24.0.0", features = ["wgsl", "raw-window-handle", "dx12"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu-core = { version = "24.0.0", features = ["wgsl", "raw-window-handle", "metal"] }

[target.'cfg(all(not(target_os = "linux"), not(target_os = "android"), not(target_os = "windows"), not(target_os = "macos"), not(target_os = "ios")))'.dependencies]
wgpu-core = { version = "24.0.0", features = ["wgsl", "raw-window-handle", "gles"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.77"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Navigator'
]
