[package]
name = "runtime-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
# wit-bindgen = "0.18.0"
# Bumped from the pinned 0.32 git commit (wit-parser 0.217, no `async func`) to a
# release whose wit-parser supports the runtime's component-model-async streams.
wit-bindgen = "0.58.0"
bytemuck = "1.14.3"
glam = "0.25.0"
wasm-bindgen = "0.2.93"

[lib]
crate-type = ["cdylib"]

# Standalone crate: the runtime integration test shells out to `cargo build`
# here, so it must not be pulled into the parent workspace.
[workspace]
